# zero-shot-captcha-solver

./: .pre-commit-config.yaml  LICENSE  README.md  demo.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  streamlit_app.py
zero_shot_captcha_solver/: __init__.py  captcha.py  captcha_preparation.py  clustering.py  lib.py  text_image_similarity.py
