[tool.poetry]
name = "zero-shot-captcha-solver"
version = "0.1.0"
description = ""
authors = ["Ludwig Stumpp <42147848+LudwigStumpp@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "zero_shot_captcha_solver"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
